--- a/en.lproj/MBMessageViewController.xib
+++ b/en.lproj/MBMessageViewController.xib
@@ -10,7 +10,7 @@
                 <outlet property="dateSent" destination="Mqd-3z-t15" id="sN9-uG-PPN"/>
                 <outlet property="messageBodyViewContainer" destination="7zo-YP-z6R" id="N4g-4a-eEw"/>
                 <outlet property="messageHeader" destination="LFh-Jj-pYw" id="gta-Wv-5wp"/>
-                <outlet property="recipients" destination="2Ac-g8-mAg" id="J6o-fd-Psc"/>
+                <outlet property="recipientsBox" destination="dcE-LI-xZa" id="sXb-Fy-9WC"/>
                 <outlet property="sender" destination="N1j-tJ-Va9" id="gcT-vI-vba"/>
                 <outlet property="subject" destination="QgS-JV-yC2" id="sPe-AK-7fA"/>
                 <outlet property="view" destination="1" id="7"/>
@@ -19,22 +19,22 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
         <customView wantsLayer="YES" horizontalHuggingPriority="954" verticalHuggingPriority="966" verticalCompressionResistancePriority="1000" alphaValue="0.5" id="1" userLabel="Message View">
-            <rect key="frame" x="0.0" y="0.0" width="428" height="1200"/>
+            <rect key="frame" x="0.0" y="0.0" width="488" height="1200"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES"/>
             <subviews>
                 <box wantsLayer="YES" title="Box" borderType="line" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="lnn-ak-sVU" customClass="MBMessageView">
-                    <rect key="frame" x="13" y="2" width="402" height="1184"/>
+                    <rect key="frame" x="13" y="2" width="462" height="1184"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <view key="contentView">
-                        <rect key="frame" x="1" y="1" width="400" height="1182"/>
+                        <rect key="frame" x="1" y="1" width="460" height="1182"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <customView verticalHuggingPriority="958" translatesAutoresizingMaskIntoConstraints="NO" id="LFh-Jj-pYw" userLabel="messageHeader" customClass="MBMessageHeaderView">
-                                <rect key="frame" x="8" y="1033" width="384" height="142"/>
+                                <rect key="frame" x="8" y="1033" width="444" height="142"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <subviews>
                                     <textField horizontalHuggingPriority="900" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="N1j-tJ-Va9">
-                                        <rect key="frame" x="339" y="105" width="47" height="17"/>
+                                        <rect key="frame" x="399" y="105" width="47" height="17"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="sender" id="uZQ-ae-hO1">
                                             <font key="font" metaFont="system"/>
@@ -53,7 +53,7 @@
                                         </connections>
                                     </textField>
                                     <textField horizontalHuggingPriority="814" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Mqd-3z-t15">
-                                        <rect key="frame" x="327" y="80" width="59" height="17"/>
+                                        <rect key="frame" x="387" y="80" width="59" height="17"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="dateSent" id="9VQ-BA-VAt">
                                             <dateFormatter key="formatter" dateStyle="short" timeStyle="short" doesRelativeDateFormatting="YES" id="7ym-bj-ZAa"/>
@@ -90,51 +90,47 @@
                                             </binding>
                                         </connections>
                                     </textField>
-                                    <textField horizontalHuggingPriority="750" verticalHuggingPriority="750" horizontalCompressionResistancePriority="870" verticalCompressionResistancePriority="137" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2Ac-g8-mAg">
-                                        <rect key="frame" x="-2" y="49" width="296" height="17"/>
+                                    <comboBox verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="dcE-LI-xZa">
+                                        <rect key="frame" x="0.0" y="45" width="337" height="26"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                        <textFieldCell key="cell" selectable="YES" sendsActionOnEndEditing="YES" title="recipient1, recipient2, recipient3, recipient4" id="VVL-eq-amh">
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="334" id="Wdn-dg-2z4"/>
+                                        </constraints>
+                                        <comboBoxCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" buttonBordered="NO" completes="NO" usesDataSource="YES" numberOfVisibleItems="10" id="Ixc-fG-Uun">
                                             <font key="font" metaFont="system"/>
                                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                                        </textFieldCell>
-                                        <accessibility help="Recipients"/>
+                                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                        </comboBoxCell>
+                                        <accessibility help="Recipient List"/>
                                         <connections>
-                                            <binding destination="-2" name="value" keyPath="self.representedObject.addressesTo" id="oOe-OF-8of">
-                                                <dictionary key="options">
-                                                    <bool key="NSAllowsEditingMultipleValuesSelection" value="NO"/>
-                                                    <bool key="NSContinuouslyUpdatesValue" value="YES"/>
-                                                    <string key="NSValueTransformerName">MBSimpleRFC822AddressSetToStringTransformer</string>
-                                                </dictionary>
-                                            </binding>
+                                            <outlet property="dataSource" destination="-2" id="ezS-Mk-gfd"/>
+                                            <outlet property="delegate" destination="-2" id="d4O-up-ogX"/>
                                         </connections>
-                                    </textField>
+                                    </comboBox>
                                 </subviews>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="QgS-JV-yC2" secondAttribute="bottom" constant="20" id="2cT-9I-VBS"/>
-                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="2Ac-g8-mAg" secondAttribute="trailing" priority="610" constant="92" id="6GK-ck-fz4"/>
+                                    <constraint firstItem="QgS-JV-yC2" firstAttribute="top" secondItem="dcE-LI-xZa" secondAttribute="bottom" constant="8" id="FsY-QU-cS6"/>
                                     <constraint firstItem="QgS-JV-yC2" firstAttribute="leading" secondItem="LFh-Jj-pYw" secondAttribute="leading" id="O2S-yI-Ox7"/>
-                                    <constraint firstItem="QgS-JV-yC2" firstAttribute="top" secondItem="2Ac-g8-mAg" secondAttribute="bottom" constant="8" id="QYr-MX-6WQ"/>
                                     <constraint firstItem="N1j-tJ-Va9" firstAttribute="top" secondItem="LFh-Jj-pYw" secondAttribute="top" constant="20" id="Ucl-N7-W34"/>
                                     <constraint firstAttribute="height" constant="142" id="Vqd-p1-Ab8"/>
                                     <constraint firstAttribute="trailing" secondItem="N1j-tJ-Va9" secondAttribute="trailing" id="Vua-qE-Egn"/>
                                     <constraint firstAttribute="trailing" secondItem="Mqd-3z-t15" secondAttribute="trailing" id="XsD-iu-YxQ"/>
                                     <constraint firstAttribute="width" relation="lessThanOrEqual" constant="1200" id="bsa-2i-HuZ"/>
                                     <constraint firstItem="Mqd-3z-t15" firstAttribute="top" secondItem="N1j-tJ-Va9" secondAttribute="bottom" constant="8" id="dGM-hA-Exu"/>
+                                    <constraint firstItem="dcE-LI-xZa" firstAttribute="leading" secondItem="LFh-Jj-pYw" secondAttribute="leading" id="gd6-aH-LI5"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" priority="865" constant="300" id="jMo-EH-biA"/>
-                                    <constraint firstItem="2Ac-g8-mAg" firstAttribute="leading" secondItem="LFh-Jj-pYw" secondAttribute="leading" id="n39-Bv-Ml5"/>
                                 </constraints>
                                 <accessibility description="Header" help="Header"/>
                                 <connections>
                                     <outlet property="dateSent" destination="Mqd-3z-t15" id="9iJ-Hr-18Z"/>
                                     <outlet property="menu" destination="Vfz-7L-t85" id="lgC-TI-xUI"/>
-                                    <outlet property="recipients" destination="2Ac-g8-mAg" id="DcI-Zu-Vfp"/>
                                     <outlet property="sender" destination="N1j-tJ-Va9" id="Np5-z3-WcY"/>
                                     <outlet property="subject" destination="QgS-JV-yC2" id="cvG-nq-51U"/>
                                 </connections>
                             </customView>
                             <customView verticalHuggingPriority="943" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="7zo-YP-z6R" userLabel="messageBodyViewContainer" customClass="MBMimeView">
-                                <rect key="frame" x="8" y="9" width="384" height="1024"/>
+                                <rect key="frame" x="8" y="9" width="444" height="1024"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <accessibility description="Message Content" help="Message Content"/>
                                 <connections>
