--- a/en.lproj/MBMessageViewController.xib
+++ b/en.lproj/MBMessageViewController.xib
@@ -18,23 +18,23 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
-        <customView wantsLayer="YES" horizontalHuggingPriority="954" verticalHuggingPriority="966" verticalCompressionResistancePriority="1000" alphaValue="0.5" id="1" userLabel="Message View">
-            <rect key="frame" x="0.0" y="0.0" width="488" height="1200"/>
+        <customView wantsLayer="YES" horizontalHuggingPriority="227" verticalHuggingPriority="1" horizontalCompressionResistancePriority="275" verticalCompressionResistancePriority="1" alphaValue="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="1" userLabel="Message View">
+            <rect key="frame" x="0.0" y="0.0" width="488" height="590"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES"/>
             <subviews>
-                <box wantsLayer="YES" title="Box" borderType="line" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="lnn-ak-sVU" customClass="MBMessageView">
-                    <rect key="frame" x="13" y="2" width="462" height="1184"/>
+                <box wantsLayer="YES" horizontalHuggingPriority="340" verticalHuggingPriority="1" horizontalCompressionResistancePriority="222" verticalCompressionResistancePriority="1" title="Box" borderType="line" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="lnn-ak-sVU" customClass="MBMessageView">
+                    <rect key="frame" x="13" y="1" width="462" height="576"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <view key="contentView">
-                        <rect key="frame" x="1" y="1" width="460" height="1182"/>
+                        <rect key="frame" x="1" y="1" width="460" height="574"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <customView verticalHuggingPriority="958" translatesAutoresizingMaskIntoConstraints="NO" id="LFh-Jj-pYw" userLabel="messageHeader" customClass="MBMessageHeaderView">
-                                <rect key="frame" x="8" y="1033" width="444" height="142"/>
+                                <rect key="frame" x="12" y="413" width="436" height="150"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <subviews>
                                     <textField horizontalHuggingPriority="900" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="N1j-tJ-Va9">
-                                        <rect key="frame" x="399" y="105" width="47" height="17"/>
+                                        <rect key="frame" x="391" y="113" width="47" height="17"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="sender" id="uZQ-ae-hO1">
                                             <font key="font" metaFont="system"/>
@@ -53,7 +53,7 @@
                                         </connections>
                                     </textField>
                                     <textField horizontalHuggingPriority="814" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Mqd-3z-t15">
-                                        <rect key="frame" x="387" y="80" width="59" height="17"/>
+                                        <rect key="frame" x="359" y="88" width="59" height="17"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="dateSent" id="9VQ-BA-VAt">
                                             <dateFormatter key="formatter" dateStyle="short" timeStyle="short" doesRelativeDateFormatting="YES" id="7ym-bj-ZAa"/>
@@ -72,7 +72,7 @@
                                         </connections>
                                     </textField>
                                     <textField horizontalHuggingPriority="888" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="QgS-JV-yC2">
-                                        <rect key="frame" x="-2" y="20" width="54" height="21"/>
+                                        <rect key="frame" x="18" y="20" width="54" height="21"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="subject" id="Ccp-NO-izn">
                                             <font key="font" size="14" name="HelveticaNeue-Bold"/>
@@ -111,11 +111,11 @@
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="QgS-JV-yC2" secondAttribute="bottom" constant="20" id="2cT-9I-VBS"/>
                                     <constraint firstItem="QgS-JV-yC2" firstAttribute="top" secondItem="dcE-LI-xZa" secondAttribute="bottom" constant="8" id="FsY-QU-cS6"/>
-                                    <constraint firstItem="QgS-JV-yC2" firstAttribute="leading" secondItem="LFh-Jj-pYw" secondAttribute="leading" id="O2S-yI-Ox7"/>
+                                    <constraint firstItem="QgS-JV-yC2" firstAttribute="leading" secondItem="LFh-Jj-pYw" secondAttribute="leading" constant="20" symbolic="YES" id="O2S-yI-Ox7"/>
                                     <constraint firstItem="N1j-tJ-Va9" firstAttribute="top" secondItem="LFh-Jj-pYw" secondAttribute="top" constant="20" id="Ucl-N7-W34"/>
-                                    <constraint firstAttribute="height" constant="142" id="Vqd-p1-Ab8"/>
+                                    <constraint firstAttribute="height" constant="150" id="Vqd-p1-Ab8"/>
                                     <constraint firstAttribute="trailing" secondItem="N1j-tJ-Va9" secondAttribute="trailing" id="Vua-qE-Egn"/>
-                                    <constraint firstAttribute="trailing" secondItem="Mqd-3z-t15" secondAttribute="trailing" id="XsD-iu-YxQ"/>
+                                    <constraint firstAttribute="trailing" secondItem="Mqd-3z-t15" secondAttribute="trailing" constant="20" symbolic="YES" id="XsD-iu-YxQ"/>
                                     <constraint firstAttribute="width" relation="lessThanOrEqual" constant="1200" id="bsa-2i-HuZ"/>
                                     <constraint firstItem="Mqd-3z-t15" firstAttribute="top" secondItem="N1j-tJ-Va9" secondAttribute="bottom" constant="8" id="dGM-hA-Exu"/>
                                     <constraint firstItem="dcE-LI-xZa" firstAttribute="leading" secondItem="LFh-Jj-pYw" secondAttribute="leading" id="gd6-aH-LI5"/>
@@ -129,9 +129,14 @@
                                     <outlet property="subject" destination="QgS-JV-yC2" id="cvG-nq-51U"/>
                                 </connections>
                             </customView>
-                            <customView verticalHuggingPriority="943" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="7zo-YP-z6R" userLabel="messageBodyViewContainer" customClass="MBMimeView">
-                                <rect key="frame" x="8" y="9" width="444" height="1024"/>
+                            <customView horizontalHuggingPriority="231" verticalHuggingPriority="1" horizontalCompressionResistancePriority="242" verticalCompressionResistancePriority="1" translatesAutoresizingMaskIntoConstraints="NO" id="7zo-YP-z6R" userLabel="messageBodyViewContainer" customClass="MBBodyStructureInlineView">
+                                <rect key="frame" x="12" y="13" width="436" height="400"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" priority="36" constant="180" placeholder="YES" id="4OX-Wq-vIJ"/>
+                                    <constraint firstAttribute="height" priority="36" constant="400" placeholder="YES" id="bcn-o3-gJ5"/>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" priority="36" constant="1500" placeholder="YES" id="m9k-W2-1Dd"/>
+                                </constraints>
                                 <accessibility description="Message Content" help="Message Content"/>
                                 <connections>
                                     <outlet property="menu" destination="Vfz-7L-t85" id="Hqr-e7-FlT"/>
@@ -140,12 +145,12 @@
                         </subviews>
                     </view>
                     <constraints>
-                        <constraint firstItem="LFh-Jj-pYw" firstAttribute="leading" secondItem="lnn-ak-sVU" secondAttribute="leading" constant="6" id="Chq-ON-a3F"/>
-                        <constraint firstItem="LFh-Jj-pYw" firstAttribute="top" secondItem="lnn-ak-sVU" secondAttribute="top" constant="6" id="Ifr-FR-TVe"/>
+                        <constraint firstItem="LFh-Jj-pYw" firstAttribute="leading" secondItem="lnn-ak-sVU" secondAttribute="leading" constant="10" id="Chq-ON-a3F"/>
+                        <constraint firstItem="LFh-Jj-pYw" firstAttribute="top" secondItem="lnn-ak-sVU" secondAttribute="top" constant="10" id="Ifr-FR-TVe"/>
                         <constraint firstItem="7zo-YP-z6R" firstAttribute="leading" secondItem="LFh-Jj-pYw" secondAttribute="leading" id="IuO-Bs-lzX"/>
                         <constraint firstItem="7zo-YP-z6R" firstAttribute="trailing" secondItem="LFh-Jj-pYw" secondAttribute="trailing" id="h3Q-bE-1iX"/>
-                        <constraint firstAttribute="bottom" secondItem="7zo-YP-z6R" secondAttribute="bottom" constant="6" id="mms-Lt-nh8"/>
-                        <constraint firstAttribute="trailing" secondItem="LFh-Jj-pYw" secondAttribute="trailing" constant="6" id="rNp-tf-pIX"/>
+                        <constraint firstAttribute="bottom" secondItem="7zo-YP-z6R" secondAttribute="bottom" constant="10" id="mms-Lt-nh8"/>
+                        <constraint firstAttribute="trailing" secondItem="LFh-Jj-pYw" secondAttribute="trailing" constant="10" id="rNp-tf-pIX"/>
                         <constraint firstItem="7zo-YP-z6R" firstAttribute="top" secondItem="LFh-Jj-pYw" secondAttribute="bottom" id="t2J-Ce-Yqr"/>
                     </constraints>
                     <shadow key="shadow" blurRadius="3">
@@ -172,9 +177,9 @@ AAAAAAEGA
             </subviews>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="lnn-ak-sVU" secondAttribute="trailing" constant="16" id="EpY-ji-QML"/>
-                <constraint firstItem="lnn-ak-sVU" firstAttribute="top" secondItem="1" secondAttribute="top" constant="16" id="dXP-tu-Lcc"/>
+                <constraint firstItem="lnn-ak-sVU" firstAttribute="top" secondItem="1" secondAttribute="top" constant="15" id="dXP-tu-Lcc"/>
                 <constraint firstItem="lnn-ak-sVU" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="16" id="u6w-Wg-Ytf"/>
-                <constraint firstAttribute="bottom" secondItem="lnn-ak-sVU" secondAttribute="bottom" constant="6" id="u8c-DQ-aEC"/>
+                <constraint firstAttribute="bottom" secondItem="lnn-ak-sVU" secondAttribute="bottom" constant="5" id="u8c-DQ-aEC"/>
             </constraints>
             <animations/>
             <accessibility description="Message" help="Message"/>
