--- a/en.lproj/MBMessageViewController.xib
+++ b/en.lproj/MBMessageViewController.xib
@@ -18,7 +18,7 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
-        <customView wantsLayer="YES" horizontalHuggingPriority="227" verticalHuggingPriority="1" horizontalCompressionResistancePriority="275" verticalCompressionResistancePriority="1" alphaValue="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="1" userLabel="Message View">
+        <customView wantsLayer="YES" horizontalHuggingPriority="227" verticalHuggingPriority="1" horizontalCompressionResistancePriority="275" verticalCompressionResistancePriority="1" alphaValue="0.5" id="1" userLabel="Message View" customClass="MBMessagesCollectionItemView">
             <rect key="frame" x="0.0" y="0.0" width="488" height="590"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES"/>
             <subviews>
