--- a/en.lproj/MBMessageViewController.xib
+++ b/en.lproj/MBMessageViewController.xib
@@ -18,11 +18,11 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
-        <customView wantsLayer="YES" horizontalHuggingPriority="227" verticalHuggingPriority="1" horizontalCompressionResistancePriority="275" verticalCompressionResistancePriority="1" alphaValue="0.5" id="1" userLabel="Message View" customClass="MBMessagesCollectionItemView">
+        <customView wantsLayer="YES" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="1000" id="1" userLabel="Message View" customClass="MBMessagesCollectionItemView">
             <rect key="frame" x="0.0" y="0.0" width="488" height="590"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES"/>
             <subviews>
-                <box wantsLayer="YES" horizontalHuggingPriority="340" verticalHuggingPriority="1" horizontalCompressionResistancePriority="222" verticalCompressionResistancePriority="1" title="Box" borderType="line" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="lnn-ak-sVU" customClass="MBMessageView">
+                <box wantsLayer="YES" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="1000" title="Box" borderType="line" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="lnn-ak-sVU" customClass="MBMessageView">
                     <rect key="frame" x="13" y="1" width="462" height="576"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <view key="contentView">
@@ -53,7 +53,7 @@
                                         </connections>
                                     </textField>
                                     <textField horizontalHuggingPriority="814" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Mqd-3z-t15">
-                                        <rect key="frame" x="359" y="88" width="59" height="17"/>
+                                        <rect key="frame" x="369" y="88" width="59" height="17"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="dateSent" id="9VQ-BA-VAt">
                                             <dateFormatter key="formatter" dateStyle="short" timeStyle="short" doesRelativeDateFormatting="YES" id="7ym-bj-ZAa"/>
@@ -72,7 +72,7 @@
                                         </connections>
                                     </textField>
                                     <textField horizontalHuggingPriority="888" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="QgS-JV-yC2">
-                                        <rect key="frame" x="18" y="20" width="54" height="21"/>
+                                        <rect key="frame" x="8" y="20" width="54" height="21"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="subject" id="Ccp-NO-izn">
                                             <font key="font" size="14" name="HelveticaNeue-Bold"/>
@@ -111,11 +111,11 @@
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="QgS-JV-yC2" secondAttribute="bottom" constant="20" id="2cT-9I-VBS"/>
                                     <constraint firstItem="QgS-JV-yC2" firstAttribute="top" secondItem="dcE-LI-xZa" secondAttribute="bottom" constant="8" id="FsY-QU-cS6"/>
-                                    <constraint firstItem="QgS-JV-yC2" firstAttribute="leading" secondItem="LFh-Jj-pYw" secondAttribute="leading" constant="20" symbolic="YES" id="O2S-yI-Ox7"/>
+                                    <constraint firstItem="QgS-JV-yC2" firstAttribute="leading" secondItem="LFh-Jj-pYw" secondAttribute="leading" constant="10" id="O2S-yI-Ox7"/>
                                     <constraint firstItem="N1j-tJ-Va9" firstAttribute="top" secondItem="LFh-Jj-pYw" secondAttribute="top" constant="20" id="Ucl-N7-W34"/>
                                     <constraint firstAttribute="height" constant="150" id="Vqd-p1-Ab8"/>
                                     <constraint firstAttribute="trailing" secondItem="N1j-tJ-Va9" secondAttribute="trailing" id="Vua-qE-Egn"/>
-                                    <constraint firstAttribute="trailing" secondItem="Mqd-3z-t15" secondAttribute="trailing" constant="20" symbolic="YES" id="XsD-iu-YxQ"/>
+                                    <constraint firstAttribute="trailing" secondItem="Mqd-3z-t15" secondAttribute="trailing" constant="10" id="XsD-iu-YxQ"/>
                                     <constraint firstAttribute="width" relation="lessThanOrEqual" constant="1200" id="bsa-2i-HuZ"/>
                                     <constraint firstItem="Mqd-3z-t15" firstAttribute="top" secondItem="N1j-tJ-Va9" secondAttribute="bottom" constant="8" id="dGM-hA-Exu"/>
                                     <constraint firstItem="dcE-LI-xZa" firstAttribute="leading" secondItem="LFh-Jj-pYw" secondAttribute="leading" id="gd6-aH-LI5"/>
@@ -129,7 +129,7 @@
                                     <outlet property="subject" destination="QgS-JV-yC2" id="cvG-nq-51U"/>
                                 </connections>
                             </customView>
-                            <customView horizontalHuggingPriority="231" verticalHuggingPriority="1" horizontalCompressionResistancePriority="242" verticalCompressionResistancePriority="1" translatesAutoresizingMaskIntoConstraints="NO" id="7zo-YP-z6R" userLabel="messageBodyViewContainer" customClass="MBBodyStructureInlineView">
+                            <customView verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="7zo-YP-z6R" userLabel="messageBodyViewContainer" customClass="MBBodyStructureInlineView">
                                 <rect key="frame" x="12" y="13" width="436" height="400"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <constraints>
@@ -157,19 +157,7 @@
                         <size key="offset" width="2" height="-2"/>
                         <color key="color" red="0.29803922772407532" green="0.29803922772407532" blue="0.29803922772407532" alpha="1" colorSpace="calibratedRGB"/>
                     </shadow>
-                    <animations>
-                        <caTransition key="subviews">
-                            <mutableData key="keyedArchiveRepresentation">
-YnBsaXN0MDDUAQIDBAUGICFYJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoKcHCA8Q
-CRUbVSRudWxs0wkKCwwNDlR0eXBlViRjbGFzc18QEl9fQ0FDb2RpbmdDb250ZW50c4ACgAaAA1RmYWRl
-0hEKEhRaTlMub2JqZWN0c6ETgASABdIWFxgZWiRjbGFzc25hbWVYJGNsYXNzZXNXTlNBcnJheaIYGlhO
-U09iamVjdNIWFxwdXENBVHJhbnNpdGlvbqMeHxpcQ0FUcmFuc2l0aW9uW0NBQW5pbWF0aW9uXxAPTlNL
-ZXllZEFyY2hpdmVy0SIjVHJvb3SAAQAIABEAGgAjAC0AMgA3AD8ARQBMAFEAWABtAG8AcQBzAHgAfQCI
-AIoAjACOAJMAngCnAK8AsgC7AMAAzQDRAN4A6gD8AP8BBAAAAAAAAAIBAAAAAAAAACQAAAAAAAAAAAAA
-AAAAAAEGA
-</mutableData>
-                        </caTransition>
-                    </animations>
+                    <animations/>
                     <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
                     <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <accessibility help="Message View"/>
