--- a/en.lproj/MBMessageOutlineViewController.xib
+++ b/en.lproj/MBMessageOutlineViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4511" systemVersion="12F45" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4511" systemVersion="13B3116" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1080" identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4511"/>
@@ -8,26 +8,27 @@
         <customObject id="-2" userLabel="File's Owner" customClass="MBMessageOutlineViewController">
             <connections>
                 <outlet property="outlineView" destination="M46-cS-F51" id="SbM-00-56i"/>
+                <outlet property="view" destination="1" id="sBq-Em-GgF"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
-        <customView id="1">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="344"/>
+        <customView horizontalHuggingPriority="666" verticalHuggingPriority="701" horizontalCompressionResistancePriority="401" verticalCompressionResistancePriority="421" translatesAutoresizingMaskIntoConstraints="NO" id="1">
+            <rect key="frame" x="0.0" y="0.0" width="368" height="169"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <scrollView autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oQP-21-CuW">
-                    <rect key="frame" x="0.0" y="0.0" width="480" height="344"/>
+                <scrollView horizontalHuggingPriority="727" verticalHuggingPriority="749" horizontalCompressionResistancePriority="293" verticalCompressionResistancePriority="306" autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oQP-21-CuW">
+                    <rect key="frame" x="0.0" y="0.0" width="368" height="169"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <clipView key="contentView" id="8F8-Yt-CPh">
-                        <rect key="frame" x="1" y="17" width="478" height="326"/>
+                    <clipView key="contentView" horizontalHuggingPriority="712" verticalHuggingPriority="738" horizontalCompressionResistancePriority="746" verticalCompressionResistancePriority="308" id="8F8-Yt-CPh">
+                        <rect key="frame" x="1" y="17" width="366" height="151"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" multipleSelection="NO" autosaveColumns="NO" headerView="eS5-sW-ewi" indentationPerLevel="16" autoresizesOutlineColumn="YES" outlineTableColumn="2fv-A6-H6z" id="M46-cS-F51">
-                                <rect key="frame" x="0.0" y="0.0" width="478" height="326"/>
+                            <outlineView horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="363" verticalCompressionResistancePriority="376" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" multipleSelection="NO" autosaveColumns="NO" headerView="eS5-sW-ewi" indentationPerLevel="16" autoresizesOutlineColumn="YES" outlineTableColumn="2fv-A6-H6z" id="M46-cS-F51">
+                                <rect key="frame" x="0.0" y="0.0" width="366" height="151"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <size key="intercellSpacing" width="3" height="2"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.40000000596046448" green="0.80000001192092896" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                 <tableColumns>
                                     <tableColumn identifier="mimeType" editable="NO" width="91" minWidth="40" maxWidth="1000" id="2fv-A6-H6z">
@@ -69,8 +70,8 @@
                                         </textFieldCell>
                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                     </tableColumn>
-                                    <tableColumn identifier="mimeIsInline" width="12" minWidth="10" maxWidth="20" id="GrN-lI-1cx">
-                                        <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="I">
+                                    <tableColumn identifier="mimeIsInline" width="20" minWidth="10" maxWidth="20" id="GrN-lI-1cx">
+                                        <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="center" title="I">
                                             <font key="font" metaFont="smallSystem"/>
                                             <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
@@ -82,7 +83,7 @@
                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                     </tableColumn>
                                     <tableColumn identifier="mimeIsAttachment" width="20" minWidth="10" maxWidth="20" id="TC3-cA-buv">
-                                        <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="A">
+                                        <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="center" title="A">
                                             <font key="font" metaFont="smallSystem"/>
                                             <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
@@ -102,9 +103,6 @@
                         </subviews>
                         <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </clipView>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="344" id="mj0-Is-2So"/>
-                    </constraints>
                     <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" id="Ae8-NM-eg4">
                         <rect key="frame" x="1" y="327" width="0.0" height="16"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -113,8 +111,8 @@
                         <rect key="frame" x="54" y="17" width="15" height="17"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
-                    <tableHeaderView key="headerView" id="eS5-sW-ewi">
-                        <rect key="frame" x="0.0" y="0.0" width="478" height="17"/>
+                    <tableHeaderView key="headerView" horizontalHuggingPriority="720" verticalHuggingPriority="734" horizontalCompressionResistancePriority="230" verticalCompressionResistancePriority="204" id="eS5-sW-ewi">
+                        <rect key="frame" x="0.0" y="0.0" width="366" height="17"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </tableHeaderView>
                 </scrollView>
