--- a/en.lproj/MBMessageViewController.xib
+++ b/en.lproj/MBMessageViewController.xib
@@ -10,6 +10,7 @@
                 <outlet property="dateSent" destination="Mqd-3z-t15" id="sN9-uG-PPN"/>
                 <outlet property="messageBodyViewContainer" destination="7zo-YP-z6R" id="N4g-4a-eEw"/>
                 <outlet property="messageHeader" destination="LFh-Jj-pYw" id="gta-Wv-5wp"/>
+                <outlet property="partsPopover" destination="3903" id="hy0-ZC-8te"/>
                 <outlet property="recipientsBox" destination="dcE-LI-xZa" id="sXb-Fy-9WC"/>
                 <outlet property="sender" destination="N1j-tJ-Va9" id="gcT-vI-vba"/>
                 <outlet property="subject" destination="QgS-JV-yC2" id="sPe-AK-7fA"/>
@@ -107,9 +108,21 @@
                                             <outlet property="delegate" destination="-2" id="d4O-up-ogX"/>
                                         </connections>
                                     </comboBox>
+                                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="3oG-Cl-2yQ">
+                                        <rect key="frame" x="20" y="118" width="98" height="19"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                        <buttonCell key="cell" type="recessed" title="Show Parts" bezelStyle="recessed" image="NSRightFacingTriangleTemplate" imagePosition="right" alignment="left" alternateImage="NSLeftFacingTriangleTemplate" borderStyle="border" inset="2" id="brs-zt-KJQ">
+                                            <behavior key="behavior" pushIn="YES" changeContents="YES" lightByContents="YES"/>
+                                            <font key="font" metaFont="systemBold" size="12"/>
+                                        </buttonCell>
+                                        <connections>
+                                            <action selector="showPartsPopover:" target="-2" id="sC9-nY-qhL"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="QgS-JV-yC2" secondAttribute="bottom" constant="20" id="2cT-9I-VBS"/>
+                                    <constraint firstItem="3oG-Cl-2yQ" firstAttribute="top" secondItem="LFh-Jj-pYw" secondAttribute="top" constant="13" id="5Pu-Ct-WXF"/>
                                     <constraint firstItem="QgS-JV-yC2" firstAttribute="top" secondItem="dcE-LI-xZa" secondAttribute="bottom" constant="8" id="FsY-QU-cS6"/>
                                     <constraint firstItem="QgS-JV-yC2" firstAttribute="leading" secondItem="LFh-Jj-pYw" secondAttribute="leading" constant="10" id="O2S-yI-Ox7"/>
                                     <constraint firstItem="N1j-tJ-Va9" firstAttribute="top" secondItem="LFh-Jj-pYw" secondAttribute="top" constant="20" id="Ucl-N7-W34"/>
@@ -120,6 +133,7 @@
                                     <constraint firstItem="Mqd-3z-t15" firstAttribute="top" secondItem="N1j-tJ-Va9" secondAttribute="bottom" constant="8" id="dGM-hA-Exu"/>
                                     <constraint firstItem="dcE-LI-xZa" firstAttribute="leading" secondItem="LFh-Jj-pYw" secondAttribute="leading" id="gd6-aH-LI5"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" priority="865" constant="300" id="jMo-EH-biA"/>
+                                    <constraint firstItem="3oG-Cl-2yQ" firstAttribute="leading" secondItem="LFh-Jj-pYw" secondAttribute="leading" constant="20" id="t6B-uD-nVd"/>
                                 </constraints>
                                 <accessibility description="Header" help="Header"/>
                                 <connections>
@@ -173,10 +187,11 @@
             <accessibility description="Message" help="Message"/>
         </customView>
         <userDefaultsController id="3"/>
-        <viewController id="3902" userLabel="Popover View Controller"/>
+        <viewController title="Message Parts" nibName="MBMessageOutlineViewController" id="3902" userLabel="Popover View Controller" customClass="MBMessageOutlineViewController"/>
         <popover id="3903">
             <connections>
                 <outlet property="contentViewController" destination="3902" id="3904"/>
+                <outlet property="delegate" destination="-2" id="uHW-Mg-s2m"/>
             </connections>
         </popover>
         <menu id="Vfz-7L-t85">
@@ -197,4 +212,8 @@
         </menu>
         <userDefaultsController representsSharedInstance="YES" id="onM-tE-AeV"/>
     </objects>
+    <resources>
+        <image name="NSLeftFacingTriangleTemplate" width="9" height="9"/>
+        <image name="NSRightFacingTriangleTemplate" width="9" height="9"/>
+    </resources>
 </document>
